# dynqr

./: CMakeLists.txt  LICENSE  README.md  catch.cmake  dynqr_test.cc
src/: dynqr.h  matrix.h
